--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.3.4.BUILD-SNAPSHOT</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<version>2.2.6.RELEASE</version>
 	</parent>
 	<groupId>br.com.idutra.spring.cloud.gateway</groupId>
 	<artifactId>spring-cloud-gateway</artifactId>
@@ -15,7 +14,7 @@
 	<description>Projeto Estudo Spring Cloud Gateway</description>
 
 	<properties>
-		<java.version>14</java.version>
+		<java.version>8</java.version>
 		<spring-cloud.version>Hoxton.BUILD-SNAPSHOT</spring-cloud.version>
 	</properties>
 
